--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,23 @@ obj/TP-final-CSharp.csproj.nuget.g.props
 obj/TP-final-CSharp.csproj.nuget.dgspec.json
 obj/project.nuget.cache
 obj/project.assets.json
+obj/Debug/net9.0/TP-final-CSharp.sourcelink.json
+obj/Debug/net9.0/TP-final-CSharp.pdb
+obj/Debug/net9.0/TP-final-CSharp.GlobalUsings.g.cs
+obj/Debug/net9.0/TP-final-CSharp.genruntimeconfig.cache
+obj/Debug/net9.0/TP-final-CSharp.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net9.0/TP-final-CSharp.dll
+obj/Debug/net9.0/TP-final-CSharp.csproj.FileListAbsolute.txt
+obj/Debug/net9.0/TP-final-CSharp.csproj.CoreCompileInputs.cache
+obj/Debug/net9.0/TP-final-CSharp.assets.cache
+obj/Debug/net9.0/TP-final-CSharp.AssemblyInfoInputs.cache
+obj/Debug/net9.0/TP-final-CSharp.AssemblyInfo.cs
+obj/Debug/net9.0/ref/TP-final-CSharp.dll
+bin/Debug/net9.0/TP-final-CSharp.deps.json
+bin/Debug/net9.0/TP-final-CSharp.exe
+bin/Debug/net9.0/TP-final-CSharp.dll
+bin/Debug/net9.0/TP-final-CSharp.runtimeconfig.json
+bin/Debug/net9.0/TP-final-CSharp.pdb
+obj/Debug/net9.0/.NETCoreApp,Version=v9.0.AssemblyAttributes.cs
+obj/Debug/net9.0/apphost.exe
+obj/Debug/net9.0/refint/TP-final-CSharp.dll
